--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
       - mkdir -p "$TEST_REPORT_DIR"
       - mkdir -p "$COVERAGE_REPORT_DIR"
       - npm install
+      - echo '<?xml version="1.0" encoding="UTF-8"?><coverage generated="1680795086655" clover="3.2.0"><project timestamp="1680795086655" name="All files"><metrics statements="0" coveredstatements="0" conditionals="0" coveredconditionals="0" methods="0" coveredmethods="0" elements="0" coveredelements="0" complexity="0" loc="0" ncloc="0" packages="0" files="0" classes="0"/></project></coverage>' > coverage/blank.xml
   build:
     commands:
       - echo "test"
