--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample containing NPM application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "pre-myget": "del /f /q NuGet.config & npm version prerelease -m \"Version bumped by MyGet Build Services\" & git push origin master"
   },
   "repository": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/MyGet/sample-npm-repository",
   "dependencies": {
-    "bootstrap": "^3.3.2"
+    "bootstrap": "^3.3.2",
+    "npm install --save-dev jest-junit"
   }
 }
