--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample containing NPM application.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "pre-myget": "del /f /q NuGet.config & npm version prerelease -m \"Version bumped by MyGet Build Services\" & git push origin master"
   },
   "repository": {
