--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   "homepage": "https://github.com/MyGet/sample-npm-repository",
   "dependencies": {
     "bootstrap": "^3.3.2",
-    "npm install --save-dev jest-junit"
+     "npm install"
   }
 }
